tests/grammar/snapshots/r#mod__grammar__alpha034__cast.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"1 as Num\").unwrap()"
---
(
    Statement(
        [
            (
                Expression(
                    (
                        Cast(
                            (
                                Number(
                                    (
                                        1.0,
                                        0..1,
                                    ),
                                ),
                                0..1,
                            ),
                            (
                                "Num",
                                5..8,
                            ),
                        ),
                        0..8,
                    ),
                ),
                0..8,
            ),
        ],
    ),
    0..8,
)
