tests/grammar/snapshots/r#mod__grammar__alpha034__command-2.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"$echo \\\"Hello, {name}!\\\"$\").unwrap()"
---
Statement(
    [
        Expression(
            Command(
                [
                    Text(
                        "echo \"Hello, ",
                    ),
                    Expression(
                        Var(
                            "name",
                        ),
                    ),
                    Text(
                        "!\"",
                    ),
                ],
                None,
            ),
        ),
    ],
)
