tests/grammar/snapshots/r#mod__grammar__alpha034__command-8.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(\"$command {\")"
---
(
    Some(
        [
            (
                Statement(
                    (
                        Expression(
                            (
                                Command(
                                    [
                                        (
                                            Text(
                                                "command",
                                            ),
                                            1..8,
                                        ),
                                        (
                                            Expression(
                                                (
                                                    Error,
                                                    10..11,
                                                ),
                                            ),
                                            9..10,
                                        ),
                                    ],
                                    None,
                                ),
                                0..10,
                            ),
                        ),
                        0..10,
                    ),
                ),
                0..10,
            ),
        ],
    ),
    [
        Simple {
            span: 10..11,
            reason: Unexpected,
            expected: {
                Some(
                    Token(
                        "true",
                    ),
                ),
                Some(
                    Token(
                        "\"",
                    ),
                ),
                Some(
                    Token(
                        "not",
                    ),
                ),
                Some(
                    Token(
                        "(",
                    ),
                ),
                Some(
                    Token(
                        "false",
                    ),
                ),
                Some(
                    Token(
                        "nameof",
                    ),
                ),
                Some(
                    Token(
                        "[",
                    ),
                ),
                Some(
                    Token(
                        "status",
                    ),
                ),
                Some(
                    Token(
                        "$",
                    ),
                ),
                Some(
                    Token(
                        "-",
                    ),
                ),
                Some(
                    Token(
                        "null",
                    ),
                ),
            },
            found: None,
            label: Some(
                "expression",
            ),
        },
        Simple {
            span: 10..11,
            reason: Unexpected,
            expected: {
                Some(
                    Token(
                        "}",
                    ),
                ),
            },
            found: None,
            label: Some(
                "expression",
            ),
        },
        Simple {
            span: 10..11,
            reason: Unexpected,
            expected: {
                Some(
                    Token(
                        "$",
                    ),
                ),
            },
            found: None,
            label: Some(
                "expression",
            ),
        },
    ],
)
