tests/grammar/snapshots/r#mod__grammar__alpha034__command.snap
---
source: tests/grammar/alpha034.rs
expression: "parse(r#\"$echo \\\"Hello, world!\\\"$\"#).unwrap()"
---
Statement(
    [
        Statement(
            Statement(
                Expression(
                    Command(
                        (),
                        [
                            Text(
                                "echo ",
                            ),
                            Escape(
                                (),
                                "\"",
                            ),
                            Text(
                                "Hello, world!",
                            ),
                            Escape(
                                (),
                                "\"",
                            ),
                        ],
                        (),
                        None,
                    ),
                ),
                None,
            ),
        ),
    ],
)
