tests/grammar/snapshots/r#mod__grammar__alpha034__comment-3.snap
---
source: tests/grammar/alpha034.rs
expression: "parse_unwrap(\"\n        main {\n            // abc\n        }\n        \")"
---
[
    (
        Main(
            [
                (
                    Comment(
                        " abc\n",
                    ),
                    28..35,
                ),
            ],
        ),
        9..44,
    ),
]
